--- a/app/src/main/res/layout/navigation_bar.xml
+++ b/app/src/main/res/layout/navigation_bar.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="#f0832b"
+        android:background="@color/yellowOne"
         android:theme="@style/AppTheme.AppBarOverlay"
         app:contentInsetEnd="0dp"
         app:contentInsetLeft="0dp"
