--- a/app/src/main/res/layout/navigation_bar.xml
+++ b/app/src/main/res/layout/navigation_bar.xml
@@ -49,7 +49,8 @@
                     android:layout_height="match_parent"
                     android:layout_centerInParent="true"
                     android:gravity="center"
-                    android:textSize="19dp"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/text_size_one"
                     android:text="你在哪" />
                 <ImageView
                     android:layout_width="wrap_content"
