--- a/app/src/main/res/layout/fragment_attention.xml
+++ b/app/src/main/res/layout/fragment_attention.xml
@@ -1,8 +1,9 @@
-<com.example.administrator.whereareyounow.view.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.administrator.whereareyounow.view.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.administrator.whereareyounow.fragment.HomeFragment">
     <include
         android:id="@+id/shouye"
@@ -10,5 +11,360 @@
         android:layout_height="wrap_content"
         app:layout_heightPercent="0.1"
         layout="@layout/navigation_bar"></include>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
+        <View
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="15dp"/>
+        <View
+            android:background="@color/grayNien"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"/>
+        <LinearLayout
+            android:background="#f7f7f7"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="100dp">
+            <ImageView
+                android:layout_marginLeft="12dp"
+                android:src="@drawable/li_yi_feng"
+                android:layout_gravity="center_vertical"
+                android:layout_width="75dp"
+                android:layout_height="75dp" />
+             <LinearLayout
+                 android:layout_marginLeft="15dp"
+                 android:layout_marginTop="13dp"
+                 android:layout_width="match_parent"
+                 android:orientation="vertical"
+                 android:layout_height="wrap_content">
+                 <TextView
+                     android:text="信息标题信息标题"
+                     android:textColor="@color/Treeblack"
+                     android:textSize="@dimen/text_size_three"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content" />
+                 <TextView
+                     android:layout_marginTop="10dp"
+                     android:text="详细内容信息详细内容详细内容...."
+                     android:textColor="@color/Treeblack"
+                     android:textSize="@dimen/text_size_three"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content" />
+                 <RelativeLayout
+                     android:layout_marginTop="10dp"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content">
+                     <TextView
+                         android:id="@+id/time"
+                         android:text="2016/09/21"
+                         android:textColor="@color/grayten"
+                         android:textSize="@dimen/text_size_five"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content" />
+                     <TextView
+                         android:layout_marginLeft="10dp"
+                         android:layout_toRightOf="@+id/time"
+                         android:text="15:12:22"
+                         android:textColor="@color/grayten"
+                         android:textSize="@dimen/text_size_five"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content" />
+                     <FrameLayout
+                         android:layout_toLeftOf="@+id/love"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_marginRight="15dp"
+                         android:layout_centerVertical="true">
 
-</com.example.administrator.whereareyounow.view.PercentFrameLayout>
+                         <ImageView
+                             android:id="@+id/shopping_trolley"
+                             android:layout_width="wrap_content"
+                             android:layout_height="wrap_content"
+                             android:layout_centerVertical="true"
+                             android:layout_gravity="center_vertical"
+                             android:src="@drawable/talk" />
+
+                         <TextView
+                             android:layout_marginLeft="12dp"
+                             android:layout_marginBottom="16dp"
+                             android:layout_width="12dp"
+                             android:layout_height="12dp"
+                             android:background="@drawable/red_circle"
+                             android:text="3"
+                             android:gravity="center_horizontal"
+                             android:textColor="@color/white"
+                             android:textSize="@dimen/text_size_six" />
+                     </FrameLayout>
+                     <ImageView
+                         android:id="@+id/love"
+                         android:layout_centerVertical="true"
+                         android:layout_alignParentRight="true"
+                         android:layout_marginRight="12dp"
+                         android:src="@drawable/love"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content" />
+                 </RelativeLayout>
+             </LinearLayout>
+        </LinearLayout>
+        <View
+            android:background="@color/grayNien"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
+        <View
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="15dp"/>
+        <View
+            android:background="@color/grayNien"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"/>
+        <LinearLayout
+            android:background="#f7f7f7"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="100dp">
+            <ImageView
+                android:layout_marginLeft="12dp"
+                android:src="@drawable/wang_yuan"
+                android:layout_gravity="center_vertical"
+                android:layout_width="75dp"
+                android:layout_height="75dp" />
+            <LinearLayout
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="13dp"
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:text="父亲：陈浩宇"
+                        android:textColor="@color/Treeblack"
+                        android:textSize="@dimen/text_size_three"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:layout_marginLeft="20dp"
+                        android:text="母亲：刘兰芝"
+                        android:textColor="@color/Treeblack"
+                        android:textSize="@dimen/text_size_three"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        android:text="电话："
+                        android:textColor="@color/Treeblack"
+                        android:textSize="@dimen/text_size_three"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        android:text="13222358682|13211234567"
+                        android:textColor="@color/Treeblack"
+                        android:textSize="@dimen/text_size_five"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+                <RelativeLayout
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/time1"
+                        android:text="2016/09/21"
+                        android:textColor="@color/grayten"
+                        android:textSize="@dimen/text_size_five"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:layout_marginLeft="10dp"
+                        android:layout_toRightOf="@+id/time1"
+                        android:text="15:12:22"
+                        android:textColor="@color/grayten"
+                        android:textSize="@dimen/text_size_five"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <FrameLayout
+                        android:layout_toLeftOf="@+id/love1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="15dp"
+                        android:layout_centerVertical="true">
+
+                        <ImageView
+                            android:id="@+id/shopping_trolley1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center_vertical"
+                            android:src="@drawable/talk" />
+
+                        <TextView
+                            android:layout_marginLeft="12dp"
+                            android:layout_marginBottom="16dp"
+                            android:layout_width="12dp"
+                            android:layout_height="12dp"
+                            android:background="@drawable/red_circle"
+                            android:text="1"
+                            android:gravity="center_horizontal"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/text_size_six" />
+                    </FrameLayout>
+                    <ImageView
+                        android:id="@+id/love1"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="12dp"
+                        android:src="@drawable/love"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
+            </LinearLayout>
+        </LinearLayout>
+        <View
+            android:background="@color/grayNien"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
+        <View
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="15dp"/>
+        <View
+            android:background="@color/grayNien"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"/>
+        <LinearLayout
+            android:background="#f7f7f7"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="100dp">
+            <ImageView
+                android:layout_marginLeft="12dp"
+                android:src="@drawable/wang_yuan"
+                android:layout_gravity="center_vertical"
+                android:layout_width="75dp"
+                android:layout_height="75dp" />
+            <LinearLayout
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="13dp"
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:text="父亲：高谷子"
+                        android:textColor="@color/Treeblack"
+                        android:textSize="@dimen/text_size_three"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:layout_marginLeft="20dp"
+                        android:text="母亲：沈敏霞"
+                        android:textColor="@color/Treeblack"
+                        android:textSize="@dimen/text_size_three"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        android:text="电话："
+                        android:textColor="@color/Treeblack"
+                        android:textSize="@dimen/text_size_three"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        android:text="13291096576|13591096576"
+                        android:textColor="@color/Treeblack"
+                        android:textSize="@dimen/text_size_five"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+                <RelativeLayout
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/time2"
+                        android:text="2016/09/21"
+                        android:textColor="@color/grayten"
+                        android:textSize="@dimen/text_size_five"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:layout_marginLeft="10dp"
+                        android:layout_toRightOf="@+id/time2"
+                        android:text="15:12:22"
+                        android:textColor="@color/grayten"
+                        android:textSize="@dimen/text_size_five"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <FrameLayout
+                        android:layout_toLeftOf="@+id/love2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="15dp"
+                        android:layout_centerVertical="true">
+
+                        <ImageView
+                            android:id="@+id/shopping_trolley2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center_vertical"
+                            android:src="@drawable/talk" />
+
+                        <TextView
+                            android:layout_marginLeft="12dp"
+                            android:layout_marginBottom="16dp"
+                            android:layout_width="12dp"
+                            android:layout_height="12dp"
+                            android:text=""
+                            android:gravity="center_horizontal"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/text_size_six" />
+                    </FrameLayout>
+                    <ImageView
+                        android:id="@+id/love2"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="12dp"
+                        android:src="@drawable/love"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
+            </LinearLayout>
+        </LinearLayout>
+        <View
+            android:background="@color/grayNien"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"/>
+    </LinearLayout>
+</com.example.administrator.whereareyounow.view.PercentLinearLayout>
