--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,11 +21,12 @@
     <color name="graySeven">#eff2f6</color>
     <color name="grayten">#909090</color>
     <color name="grayEight">#F3EDED</color>
-    <color name="grayNien">#BC763A</color>
+    <color name="grayNien">#d6d7dc</color>
     <color name="grayEleven">#b4b4b4</color>
     <color name="grayTwelve">#b2b2b2</color>
+    <color name="grayTwelve1">#b3b3b3</color>
     <color name="yellowOne">#f0832b</color>
-    <color name="yellowTow">#e6702d</color>
+    <color name="yellowTow">#f08324</color>
     <color name="red">#ff0000</color>
     <color name="redOne">#FE363D</color>
     <color name="redTwo">#FE8FB3</color>
