--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <color name="grayEight">#F3EDED</color>
     <color name="grayNien">#d6d7dc</color>
     <color name="grayEleven">#b4b4b4</color>
+    <color name="grayEleven1">#f7f7f7</color>
     <color name="grayTwelve">#b2b2b2</color>
     <color name="grayTwelve1">#b3b3b3</color>
     <color name="yellowOne">#f0832b</color>
