--- a/app/src/main/res/layout/fragment_default.xml
+++ b/app/src/main/res/layout/fragment_default.xml
@@ -3,11 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.administrator.whereareyounow.fragment.DefaultFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rcv"
+        android:focusableInTouchMode="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="111111111111111111111111" />
-
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 </FrameLayout>
