--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -21,6 +21,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/head_change"
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:layout_marginTop="35dp"
@@ -48,6 +49,7 @@
     </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/layout_push"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#f2f2f2">
@@ -86,6 +88,7 @@
         </LinearLayout>
     </RelativeLayout>
     <RelativeLayout
+        android:id="@+id/layout_realname"
         android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -125,6 +128,7 @@
         </LinearLayout>
     </RelativeLayout>
     <RelativeLayout
+        android:id="@+id/layout_user"
         android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -164,6 +168,7 @@
         </LinearLayout>
     </RelativeLayout>
     <RelativeLayout
+        android:id="@+id/layout_count"
         android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="50dp"
