--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -18,8 +18,7 @@
         android:id="@+id/msg_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/shouye"
- ></android.support.v7.widget.RecyclerView>
+        android:layout_below="@+id/shouye"></android.support.v7.widget.RecyclerView>
 
     <LinearLayout
         android:id="@+id/line"
